# WireDown

./: .env.example  .gitignore  ARCHITECTURE.md  BUILD_INSTRUCTIONS.md  README.md  docker-compose.yml  logo.psd  proxmox-lxc.sh  proxmox-update.sh  proxmox-vm.sh
backend/: Dockerfile  app.py  bandwidth_throttle.py  dns_sinkhole.py  esp32_flasher.py  fake_admin.py  fake_ssh.py  port_scan_detector.py  requirements.txt  threat_engine.py  xz_backdoor_detector.py
backend/honeypot_fs/: .env  passwords.txt
backend/templates/: admin_dashboard.html  admin_login.html  warning.html
core/include/: Engine.h  INetworkInterface.h  ISystem.h  ITransport.h
core/src/: Engine.cpp
deploy/: RELEASE_NOTES.md  proxmox-lxc.sh  proxmox-update.sh  proxmox-vm.sh  wd-engine.service  wiredown-api.service
docs/: proxmox_usb_passthrough.md
esp32_sensor/: esp32_sensor.ino
frontend/: ai_agent.js  esp32_setup.js  index.html  physics_world.js  style.css
scripts/: install_arduino_cli.sh
src/api/: Dockerfile  alert_service.py  app.py  db.py  deception_service.py  dns_sinkhole.py  fake_admin.py  fake_ssh.py  firewall.py  guardian_service.py  ip_access_control.py  network_discovery.py  network_init.py  network_security.json  orchestration.py  oui_updater.py  real_admin.py  requirements.txt  server.py  threat_engine.py  update_service.py  wd_engine_bridge.py  xz_backdoor_detector.py
src/api/honeypot_fs/: passwd
src/engine/: Cargo.toml  README.md  build.sh
src/engine/src/: arp.rs  bridge.rs  capture.rs  dns.rs  event.rs  main.rs  oui.rs  portscan.rs
src/ui/static/: ai_agent.js  (+2 more)
(+9 files in other folders)
