[package]
name        = "wd-engine"
version     = "0.1.0"
edition     = "2021"
authors     = ["WireDown Engineering"]
description = "Ultra-lightweight network sniffer + DNS sinkhole for WireDown"
license     = "MIT"

[[bin]]
name = "wd-engine"
path = "src/main.rs"

[profile.release]
opt-level     = "z"        # optimize for size
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"

[dependencies]
tokio       = { version = "1", features = ["rt", "macros", "net", "time", "sync", "io-util", "signal", "fs"] }
pnet        = "0.34"        # AF_PACKET + raw datalink + ICMP/TCP/UDP packet parsing
etherparse  = "0.13"        # Zero-copy Ethernet/IPv4 header parser
trust-dns-proto = { version = "0.23", default-features = false, features = ["serde-config"] }
ahash       = "0.8"         # Faster HashMap for device registry
parking_lot = "0.12"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
clap        = { version = "4", features = ["derive"] }
log         = "0.4"
env_logger  = { version = "0.11", default-features = false, features = ["humantime"] }
anyhow      = "1"
once_cell   = "1"
